# grogarium

./: .all-contributorsrc  .gitlab-ci.yml  .mergify.yml  .prettierignore  .replit  .slugignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  CREDITS.rst  LICENSE  Procfile  README.md  README.rst  bot.py  config.toml  config.yml  keep_alive.py  pyproject.toml  requirements.txt  settings.toml  settings.yml  util.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: format-black.yml  format.yml  greetings.yml  stale.yml
.gitlab/: .gitlab-webide.yml
.gitlab/issue_templates/: bug_report.md
.gitlab/merge_request_templates/: merge_request_template.md
docs/: CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.md  CONTRIBUTING.rst  CREDITS.md  index.md
etc/: stockfish-mv
src/: bot.py  config.yml  fun.py  imag.py  keep_alive.py  tbgs.py  user.py  util.py
